<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.jlab.clas</groupId>
  <artifactId>coatjava</artifactId>
  <version>13.2.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <coat.deployment.url>file://myLocalMvnRepo</coat.deployment.url> <!-- must be consistent with 'deploy-coatjava.sh' -->
  </properties>

  <modules>
    <module>common-tools</module>
    <module>reconstruction</module>
  </modules>

  <repositories>
    <repository>
      <id>clas12maven</id>
      <url>https://clasweb.jlab.org/.clas12maven</url>
    </repository>
    <repository>
      <id>jnp-maven</id>
      <url>https://clasweb.jlab.org/.jhep/maven</url>
    </repository>
  </repositories>

  <!-- :::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::: -->

  <dependencyManagement>
    <dependencies>

      <dependency>
        <groupId>com.github.spotbugs</groupId>
        <artifactId>spotbugs</artifactId>
        <version>4.9.1</version>
      </dependency>

      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.13.2</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>org.json</groupId>
        <artifactId>json</artifactId>
        <version>20250517</version>
      </dependency>

      <dependency>
        <groupId>org.yaml</groupId>
        <artifactId>snakeyaml</artifactId>
        <version>2.4</version>
      </dependency>

      <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-base</artifactId>
        <version>26-ea+3</version>
        <classifier>linux</classifier>
      </dependency>

      <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-graphics</artifactId>
        <version>22.0.2</version>
        <classifier>linux</classifier>
      </dependency>

      <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-fxml</artifactId>
        <version>22.0.2</version>
        <classifier>linux</classifier>
      </dependency>

      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>2.0.17</version>
      </dependency>

      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-math3</artifactId>
        <version>3.6.1</version>
      </dependency>

      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>3.18.0</version>
      </dependency>

      <dependency>
        <groupId>org.jlab</groupId>
        <artifactId>groot</artifactId>
        <version>4.0.5</version>
      </dependency>

      <dependency>
        <groupId>org.freehep</groupId>
        <artifactId>jminuit</artifactId>
        <version>1.0</version>
      </dependency>

      <dependency>
        <groupId>org.jlab.coda</groupId>
        <artifactId>jclara</artifactId>
        <version>4.3-SNAPSHOT</version>
      </dependency>

      <dependency>
        <groupId>org.jlab.coda</groupId>
        <artifactId>jevio</artifactId>
        <classifier>jar-with-dependencies</classifier>
        <version>6.2-SNAPSHOT</version>
        <exclusions>
          <exclusion>
            <groupId>net.jpountz.lz4</groupId>
            <artifactId>lz4-java</artifactId>
          </exclusion>
          <exclusion>
            <groupId>com.aha.compression</groupId>
            <artifactId> AHACompressionAPI </artifactId>
          </exclusion>
          <exclusion>
            <groupId>com.lmax</groupId>
            <artifactId>disruptor</artifactId>
          </exclusion>
          <exclusion>
            <groupId>proguard</groupId>
            <artifactId>proguard</artifactId>
          </exclusion>
        </exclusions>
      </dependency>

      <dependency>
        <groupId>org.jlab.jnp</groupId>
        <artifactId>jnp-hipo</artifactId>
        <version>2.0-SNAPSHOT</version>
      </dependency>

      <dependency>
        <groupId>org.jlab.jnp</groupId>
        <artifactId>jnp-hipo4</artifactId>
        <version>4.3-SNAPSHOT</version>
      </dependency>

      <dependency>
        <groupId>org.jlab.ccdbrcdb</groupId>
        <artifactId>ccdbrcdb</artifactId>
        <version>2.0</version>
      </dependency>

      <dependency>
        <groupId>gov.nist.math</groupId>
        <artifactId>jama</artifactId>
        <version>1.0.3</version>
      </dependency>

      <dependency>
        <groupId>ai.djl</groupId>
        <artifactId>bom</artifactId>
        <version>0.32.0</version> <!-- sets version number for all 'ai.djl' dependencies -->
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <!-- BEGIN DEPENDENCY CONFLICT RESOLUTION -->
      <!-- the following dependency versions are specified to resolve dependency tree conflicts; see also exclusions in `maven-enforcer-plugin` -->

      <dependency> <!-- conflict between `org.jlab.jnp:jnp-hipo:jar:2.0-SNAPSHOT` and `org.jlab.jnp:jnp-hipo4:jar:4.3-SNAPSHOT` -->
        <groupId>net.objecthunter</groupId>
        <artifactId>exp4j</artifactId>
        <version>0.4.8</version> <!-- choose the later version -->
      </dependency>

      <dependency> <!-- resolve conflict between `org.jlab.coda:jclara` and `ai.djl:api` -->
        <groupId>com.google.code.gson</groupId>
        <artifactId>gson</artifactId>
        <version>2.13.1</version> <!-- choose the later version -->
      </dependency>

      <dependency> <!-- resolve conflict between `j4ml:j4ml-clas12` and `clas-tracking` -->
        <groupId>org.ejml</groupId>
        <artifactId>ejml-simple</artifactId>
        <version>0.40</version> <!-- match version from `j4ml:j4ml-clas12:jar:0.9-SNAPSHOT` -->
      </dependency>

      <!-- END DEPENDENCY CONFLICT RESOLUTION -->

    </dependencies>
  </dependencyManagement>

  <!-- :::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::: -->

  <build>

    <extensions>
      <extension>
        <groupId>org.apache.maven.wagon</groupId>
        <artifactId>wagon-ssh-external</artifactId>
        <version>3.5.3</version>
      </extension>
    </extensions>

    <!-- .................................................................................. -->

    <plugins> <!-- plugins inherited by all child POMs -->

      <plugin>
        <groupId>com.github.spotbugs</groupId>
        <artifactId>spotbugs-maven-plugin</artifactId>
        <version>4.9.3.2</version>
        <configuration>
          <excludeFilterFile>spotbugs-exclude.xml</excludeFilterFile>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.11.2</version>
        <configuration>
          <doctitle>COATJAVA - API documentation - version ${project.version}</doctitle>
          <windowtitle>COATJAVA - API documentation - version ${project.version}</windowtitle>
          <encoding>UTF-8</encoding>
          <doclint>none</doclint>
        </configuration>
        <executions>
          <execution>
            <id>aggregate</id>
            <goals>
              <goal>aggregate</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.14.0</version>
        <configuration>
          <release>17</release>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.3.1</version>
        <configuration>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.4.2</version>
        <configuration>
          <archive>
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
              <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
            </manifest>
            <manifestSections>
              <manifestSection>
                <name>${project.name}</name>
                <manifestEntries>
                  <groupId>${project.groupId}</groupId>
                  <artifactId>${project.artifactId}</artifactId>
                  <version>${project.version}</version>
                </manifestEntries>
              </manifestSection>
            </manifestSections>
          </archive>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>3.6.1</version>
        <executions>
          <execution>
            <id>enforce-dependency-convergence</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <dependencyConvergence>
                  <excludes>
                    <!-- excluding conflicts that may be tricky to resolve -->
                    <exclude>com.google.protobuf:protobuf-java</exclude> <!-- `org.jlab.ccdbrcdb:ccdbrcdb` use v3, but `org.jlab.coda.xmsg` uses v2 -->
                  </excludes>
                </dependencyConvergence>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.13</version>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

    </plugins>

    <!-- .................................................................................. -->

    <pluginManagement>
      <plugins> <!-- plugin configurations (unused in child POMs unless declared) -->

        <!-- generate minimal POM files for deployment, containing GAV (groupID, artifactId, version) -->
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>flatten-maven-plugin</artifactId>
          <version>1.7.2</version>
          <configuration>
            <flattenMode>fatjar</flattenMode>
          </configuration>
          <executions>
            <execution>
              <id>flatten</id>
              <phase>package</phase>
              <goals>
                <goal>flatten</goal>
              </goals>
            </execution>
          </executions>
        </plugin>

        <!-- deployment configuration -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.1.4</version>
          <configuration>
            <!-- Use the minimal GAV POM -->
            <pomFile>${project.build.directory}/.flattened-pom.xml</pomFile>
          </configuration>
        </plugin>

      </plugins>
    </pluginManagement>

  </build>

</project>
